# numis

./: .gitignore  README.md  flake.nix  hie.yaml  numis.cabal  sample.nms  scripts.nix
app/: Main.hs
cli/Cli/: Ansi.hs  Command.hs  Main.hs
cli/Cli/Command/: Parser.hs  Print.hs  Type.hs
examples/: 2008crisis.nms  assigns.nms  description.nms  has.nms  issues.nms  novates.nms  owes.nms  sample.md  sample.nms  setsOff.nms  testTable.md  testTable2.md
gui-exe/: Main.hs
gui/Gui/: Main.hs
numis/Extras/: Maybe.hs  Tuple.hs
numis/Numis/: Extras.hs  Language.hs  Obligation.hs  Payment.hs  Relation.hs
numis/Numis/Language/: Expr.hs  Parser.hs  Printer.hs
numis/Numis/Transform/: Denormalize.hs  Entities.hs  Table.hs
test/Language/: ParserSpec.hs
